# farmore-ethereum-adapter

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bindings.rs  lib.rs
